@@ -1350,6 +1350,17 @@ void DocumentImpl::closeInternal( bool checkTokenizer )
         m_view->part()->checkEmitLoadEvent();
 }
 
+void DocumentImpl::setParsing(bool b)
+{
+    if (m_bParsing != b) {
+        m_bParsing = b;
+        if (!b && haveStylesheetsLoaded() && 
+            (!ownerElement() || (ownerElement()->renderer() && !ownerElement()->renderer()->needsLayout()) && 
+            renderer() && renderer()->needsLayout())
+            updateLayout();
+    }
+}
+    
 void DocumentImpl::write( const DOMString &text )
 {
     write(text.string());
