@@ -338,7 +338,7 @@ public:
     void setHTMLMode( HTMLMode m ) { hMode = m; }
     HTMLMode htmlMode() const { return hMode; }
 
-    void setParsing(bool b) { m_bParsing = b; }
+    void setParsing(bool b);
     bool parsing() const { return m_bParsing; }
 
     void setTextColor( QColor color ) { m_textColor = color; }
